AA_Processor_Prod 4.0a